// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api/docker getPkgReleases adds library/ prefix for Docker Hub (explicit) 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "https://index.docker.io/v2/",
      Object {
        "throwHttpErrors": false,
      },
    ],
    Array [
      "https://auth.docker.io/token?service=registry.docker.io&scope=repository:library/node:pull",
      Object {
        "headers": Object {
          "authorization": "Basic c29tZS11c2VybmFtZTpzb21lLXBhc3N3b3Jk",
        },
        "json": true,
      },
    ],
    Array [
      "https://index.docker.io/v2/library/node/tags/list?n=10000",
      Object {
        "headers": Object {
          "authorization": "Bearer some-token ",
        },
        "json": true,
      },
    ],
    Array [
      "https://index.docker.io/v2/",
      Object {
        "throwHttpErrors": false,
      },
    ],
    Array [
      "https://index.docker.io/v2/library/node/manifests/1.0.0",
      Object {
        "headers": Object {
          "accept": "application/vnd.docker.distribution.manifest.v2+json",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "headers": Object {
          "www-authenticate": "Bearer realm=\\"https://auth.docker.io/token\\",service=\\"registry.docker.io\\",scope=\\"repository:library/node:pull  \\"",
        },
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "body": Object {
          "token": "some-token ",
        },
        "headers": Object {},
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "body": Object {
          "tags": Array [
            "1.0.0",
          ],
        },
        "headers": Object {},
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "headers": Object {},
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "body": Object {},
        "headers": Object {},
      },
    },
  ],
}
`;

exports[`api/docker getPkgReleases adds library/ prefix for Docker Hub (implicit) 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "https://index.docker.io/v2/",
      Object {
        "throwHttpErrors": false,
      },
    ],
    Array [
      "https://auth.docker.io/token?service=registry.docker.io&scope=repository:library/node:pull",
      Object {
        "headers": Object {
          "authorization": "Basic c29tZS11c2VybmFtZTpzb21lLXBhc3N3b3Jk",
        },
        "json": true,
      },
    ],
    Array [
      "https://index.docker.io/v2/library/node/tags/list?n=10000",
      Object {
        "headers": Object {
          "authorization": "Bearer some-token ",
        },
        "json": true,
      },
    ],
    Array [
      "https://index.docker.io/v2/",
      Object {
        "throwHttpErrors": false,
      },
    ],
    Array [
      "https://index.docker.io/v2/library/node/manifests/1.0.0",
      Object {
        "headers": Object {
          "accept": "application/vnd.docker.distribution.manifest.v2+json",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "headers": Object {
          "www-authenticate": "Bearer realm=\\"https://auth.docker.io/token\\",service=\\"registry.docker.io\\",scope=\\"repository:library/node:pull  \\"",
        },
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "body": Object {
          "token": "some-token ",
        },
        "headers": Object {},
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "body": Object {
          "tags": Array [
            "1.0.0",
          ],
        },
        "headers": Object {},
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "headers": Object {},
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "body": Object {},
        "headers": Object {},
      },
    },
  ],
}
`;

exports[`api/docker getPkgReleases adds no library/ prefix for other registries 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "https://k8s.gcr.io/v2/",
      Object {
        "throwHttpErrors": false,
      },
    ],
    Array [
      "https://k8s.gcr.io/v2/token?service=k8s.gcr.io&scope=repository:kubernetes-dashboard-amd64:pull",
      Object {
        "headers": Object {
          "authorization": "Basic c29tZS11c2VybmFtZTpzb21lLXBhc3N3b3Jk",
        },
        "json": true,
      },
    ],
    Array [
      "https://k8s.gcr.io/v2/kubernetes-dashboard-amd64/tags/list?n=10000",
      Object {
        "headers": Object {
          "authorization": "Bearer some-token ",
        },
        "json": true,
      },
    ],
    Array [
      "https://k8s.gcr.io/v2/",
      Object {
        "throwHttpErrors": false,
      },
    ],
    Array [
      "https://k8s.gcr.io/v2/kubernetes-dashboard-amd64/manifests/1.0.0",
      Object {
        "headers": Object {
          "accept": "application/vnd.docker.distribution.manifest.v2+json",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "headers": Object {
          "www-authenticate": "Bearer realm=\\"https://k8s.gcr.io/v2/token\\",service=\\"k8s.gcr.io\\"",
        },
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "body": Object {
          "token": "some-token ",
        },
        "headers": Object {},
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "body": Object {
          "tags": Array [
            "1.0.0",
          ],
        },
        "headers": Object {},
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "headers": Object {},
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "body": Object {},
        "headers": Object {},
      },
    },
  ],
}
`;

exports[`api/docker getPkgReleases uses custom registry in depName 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "https://registry.company.com/v2/",
      Object {
        "throwHttpErrors": false,
      },
    ],
    Array [
      "https://registry.company.com/v2/node/tags/list?n=10000",
      Object {
        "headers": Object {},
        "json": true,
      },
    ],
    Array [
      "https://registry.company.com/v2/",
      Object {
        "throwHttpErrors": false,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "headers": Object {},
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "body": Object {
          "tags": Array [
            "1.0.0",
          ],
        },
        "headers": Object {},
      },
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`api/docker getPkgReleases uses custom registry with registryUrls 1`] = `
Array [
  Array [
    "https://registry.company.com/v2/",
    Object {
      "throwHttpErrors": false,
    },
  ],
  Array [
    "https://registry.company.com/v2/node/tags/list?n=10000",
    Object {
      "headers": Object {},
      "json": true,
    },
  ],
  Array [
    "https://api.github.com/user/9287/repos?page=3&per_page=100",
    Object {
      "headers": Object {},
      "json": true,
    },
  ],
  Array [
    "https://registry.company.com/v2/",
    Object {
      "throwHttpErrors": false,
    },
  ],
  Array [
    "https://registry.company.com/v2/node/manifests/latest",
    Object {
      "headers": Object {
        "accept": "application/vnd.docker.distribution.manifest.v2+json",
      },
    },
  ],
]
`;

exports[`api/docker getPkgReleases uses lower tag limit for ECR deps 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "https://123456789.dkr.ecr.us-east-1.amazonaws.com/v2/",
      Object {
        "throwHttpErrors": false,
      },
    ],
    Array [
      "https://123456789.dkr.ecr.us-east-1.amazonaws.com/v2/node/tags/list?n=1000",
      Object {
        "headers": Object {},
        "json": true,
      },
    ],
    Array [
      "https://123456789.dkr.ecr.us-east-1.amazonaws.com/v2/",
      Object {
        "throwHttpErrors": false,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "headers": Object {},
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "body": Object {},
        "headers": Object {},
      },
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`api/docker getRegistryRepository handles local registries 1`] = `
Object {
  "registry": "https://registry:5000",
  "repository": "org/package",
}
`;
